# hello-crewai-lm

./: .env.toml.example  .gitignore  README.md  pyproject.toml
scripts/: switch_model.py  sync_models.py
src/hello_crewai/: config_loader.py  crew.py  main.py
src/hello_crewai/config/: tasks.yaml
tests/: debug_crewai.py  debug_llm.py  test_crewai_simple.py  test_lm_studio_simple.py
