[project]
name = "hello_crewai"
version = "0.1.0"
description = "hello_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.130.0,<0.140.0",
    "python-dotenv>=1.0.0",
    "chroma-hnswlib==0.7.5",
    "toml>=0.10.2",
]

[project.scripts]
hello_crewai = "hello_crewai.main:run"
run_crew = "hello_crewai.main:run"
train = "hello_crewai.main:train"
replay = "hello_crewai.main:replay"
test = "hello_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
